--- a/static/landing/landing/less/navbar.less
+++ b/static/landing/landing/less/navbar.less
@@ -50,6 +50,7 @@
 
 .navbar-collapse {
   max-height: 340px;
+  margin-top:50px;
   overflow-x: visible;
   padding-right: @navbar-padding-horizontal;
   padding-left:  @navbar-padding-horizontal;
@@ -239,7 +240,7 @@
   @media (min-width: @grid-float-breakpoint) {
     float: left;
     margin: 0;
-
+    
     > li {
       float: left;
       > a {
@@ -296,7 +297,7 @@
     border: 0;
     margin-left: 0;
     margin-right: 0;
-    padding-top: 0;
+    padding-top:200px;
     padding-bottom: 0;
     .box-shadow(none);
   }
