--- a/static/landing/landing/less/styles-custom.less
+++ b/static/landing/landing/less/styles-custom.less
@@ -2,50 +2,59 @@ body {background: @white;}
 
 .lead-custom {
     font-family: @font-family-custom-panel;
-    }
+}
 
 .header {
-    background-color: @white;
-    display: block;
-    max-width: 100%;
-    height: 15%;
+    height: 100%;
     .nav {
-        margin-top: 58px;
+        position:absolute;
+        z-index: 1000;
+        right:0;
+        margin-top:10px;
         & a {
             font-family:@font-family-custom-title;
-            }
         }
-}
-.background {
-    height:120px;
-    .stretch {
-        background-image: url('../img/niqels-experimento.png');
-        background-position:0% 50%; 
-        max-width:100%; 
-        height:87%;
-        background-repeat:no-repeat;
-        .hide-text();
     }
 }
+
+.navbar {margin-bottom:0;}
+
+.navbar-default {
+    background: @white; 
+    border:transparent;
+}
+
+.background {
+    height:110px;
+    padding-left:(@padding-base-horizontal + 2px);
+    .stretch {
+        background-image: url('../img/niqels-experimento.png');
+        max-width:100%;
+        height:100%;
+        margin-top: -30px;
+        background-repeat:no-repeat;
+        .text-hide;
+    }
+}
+
 .bg-panel {
     background:@gray-lighter;
     margin-top: 2px;
-    margin-left:-22px;
-    .size(400px;100%);
-    padding-bottom:38px;
+    .center-block();
+    padding:0 24px 37px 24px;
     .panel {
         & :hover {
             background:@azul-escuro-lighter;
             color:@white;
+            }
         }
-    }
         .panel-group {
-            width:350px;
             margin-top: 1.5em;
             .center-block();
             .panel-title {
                 font-family:@font-family-custom-panel;
                 color:@gray-dark;
+                border-color:transparent!important;
                 & > a {
                     text-decoration: none;
                     &:hover {
@@ -55,146 +64,120 @@ body {background: @white;}
                 }
                 & > p > .btn {
                     font-family: @font-family-custom-title;
-                    }
+                }
+                .panel-body {
+                    line-height: 1.4em;
+                    font-size: @font-size-base;
+                    text-align: left;
+                }
             }
     }
 
-.panel-body {
-    line-height: 1.4em;
-    font-size: @font-size-base;
-    text-align: left;
-}
 
 .img-responsive {
     .img-responsive();
 }
 
-.marketing {
-    padding:@padding-base-vertical;
-    .make-md-column-offset(2);
-    .make-row();
-}
-
-.btn-custom {
-    margin-top: 3em;
-}
-
 .jumbotron {
     text-align:center;
     background:@azul-claro;
-    .panel-fadein {
-        .make-md-column-offset(1);
-        background-repeat:none;
-        }
+    height:650px;
         .btn {
+            margin-top: 4.5em;
             padding:(@modal-title-padding - 1) (@modal-inner-padding + 4) (@modal-title-padding + 2);
             text-shadow: 1px 1px 1px #333!important;
             background:@laranja;
             background-repeat:none;
-                &:hover {
-                    background:@laranja-dark;
-                    border-color: @laranja-dark;
-
-                    }
-                }
-            & > h1 {
-                color:@gray-dark;
-                font-family:@font-family-custom-title;
-                font-weight:100;
-                & > span {
-                    color:#ffffff;
-                    text-shadow: 1px 2px 2px #666666;
-                    filter: dropshadow(color=#666666, offx=1, offy=2);
-                    }
-                }
+            &:hover {
+                background:@laranja-dark;
+                border-color: @laranja-dark;
+            }
+        }
+        & > h1 {
+            color:@gray-dark;
+            font-family:@font-family-custom-title;
+            font-weight:100;
+            & > span {
+                color:#ffffff;
+                text-shadow: 1px 2px 2px #666666;
+                filter: dropshadow(color=#666666, offx=1, offy=2);
+            }
+        }
     }
 
-i {
-    padding-left: 1em;
-}
+i {padding-left: 1em;}
+
+hr {margin-left:0px;}
 
 .fadein {
-    height:400px; 
-    width:500px;
     & > img {
         position:absolute;
-        right:115px;
-        margin-top:2px;}
-    }
-    
-.panel-and-img-all {
-    margin-left: -(percentage((2.5 / @grid-columns)));
-    .panel-and-img {
-        line-height:(@line-height-computed * 1.4);
-        .size(700px;100%);
-        padding:(@padding-base-vertical*2);
-        & > h2 {
-            font-family:@font-family-title-textos-h2;
-            font-size: (@font-size-large * 2);
-            font-weight: 700;
-        }
-        & > p {
-            margin:0 5px;
-            font-family:@font-family-textos;
-            font-size: (@font-size-base + 2px);
-            color:@azul-escuro-lighter;
-            font-weight: 600; 
-            // .custom-text {
-            //    font-family:@font-family-custom-panel!important;
-            //    font-size: @font-size-large;
-            //    color:@gray-dark;
-
-            // }
-        }
-    }
-    .img-margin {
-        // margin-top: 30px;
     }
 }
 
-.footer {
-    background:@gray-lighter; 
-    height:25px;  
-    & > h5 {
-        color:@gray;
-        padding-top:6px;
-        & > a {
-            color:@gray-darker;
-            &:hover {
-                text-decoration:underline;
+    .marketing {
+        padding:@padding-base-vertical;
+        .clearfix();
+    }
+    
+    .panel-and-img-all {
+        .panel-and-img {
+            line-height:(@line-height-computed * 1.4);
+            & > h2 {
+                font-family:@font-family-title-textos-h2;
+                font-size: (@font-size-large * 2);
+                font-weight: 700;
+            }
+            & > p {
+                margin:0 5px;
+                font-family:@font-family-textos;
+                font-size: (@font-size-base + 2px);
+                color:@azul-escuro-lighter;
+                font-weight: 600; 
+            }
+        }
+    }
+
+    .footer {
+        background:@gray-lighter; 
+        height:25px;
+        & > h5 {
+            color:@gray;
+            padding-top:6px;
+            & > a {
+                color:@gray-darker;
+                &:hover {
+                    text-decoration:underline;
                 }
             }
         }
     }
 
-#bg-background-modal {
-    display:none;
-    background:transparent url('../img/bg-background-modal.png') repeat-x; 
-    width:100%; 
-    height:800px; 
-    position:fixed; 
-    top:0; 
-    z-index: 0;
+    #bg-background-modal {
+        display:none;
+        background:transparent url('../img/bg-background-modal.png') repeat-x; 
+        width:100%; 
+        height:800px; 
+        position:fixed; 
+        top:0; 
+        left:0;
+        z-index: 1050;
 
     #modal-custom-login {
-
             a.hiddenanchor {
                 display:none; 
             }
-
             #wrapper-login {
                 left:30%;
                 top:10%;
                 position:absolute;
                 z-index:@zindex-modal;
-
                     & > h1 {
                         padding-top:@padding-base-vertical;
                         padding-bottom:(@padding-base-vertical * 2);
                         font-family:@font-family-custom-title;
                         font-size: @font-size-large;
                     }
-
                     #register, #login {
                         position: absolute;   
                         padding:@padding-base-vertical;
@@ -214,7 +197,6 @@ i {
                             padding-right:10px;
                             margin-top: 40px;
                             background: @gray-lighter;
-
                              .change_link {
                                 text-align: left;
                                 color: @azul-escuro;
@@ -236,8 +218,8 @@ i {
                                 }
                                 &:hover, &:active {
                                     background:@gray-darker;
-                                    }
                                 }
+                            }
                         }
 
                     }
@@ -250,11 +232,10 @@ i {
                     #login {
                         .size(500px;360px);
                         opacity: 0;
-                        }
-
                     }
+                }
             }
-    }
+}
 
 
 
@@ -319,4 +300,274 @@ input:-moz-placeholder,textarea:-moz-placeholder {
     animation-name: scaleIn;
 }
 
+@media (max-width: @screen-xs-max) {
+    i, .glyphicon.glyphicon-chevron-right {
+        display:none!important;
+    }
+    .background {
+        padding: 0;
+        margin-top:30px;
+        height:130px;
+        .stretch {
+            padding:0;
+            background-image: url('../img/projeto-niqels-xs.png');
+            background-position:50% 50%;
+        }
+    }
+    .navbar-header {
+        .navbar-toggle {
+            margin-right:0;
+            background: @gray-light;
+        }
+    }
+    .header {
+        .nav {
+            position:relative;
+            & > li {
+                clear: both;
+            }
+        }
+    }
+    .navbar-collapse {
+        margin-top:0;
+    }
 
+    .nav-pills > li {
+        float:none;
+        text-align:center;
+    }
+
+    .bg-panel {
+        background:none;
+        padding:0;
+        .panel-group {
+            .panel-body {
+                font-size:@font-size-small;
+                text-align: center;
+            }
+        }
+    }
+    .jumbotron {
+        height:100%;
+        .btn {
+            margin-top: 1em;
+            font-size:@font-size-base;
+            padding:20px 0;
+        }
+    }
+    .panel-and-img-all {
+         padding:0;
+        .panel-and-img {
+            padding:0;
+            & > h2 {
+                font-size: (@font-size-large * 1.5);
+                text-align: center;
+            }
+            & > p {
+                line-height: 1.5em;
+                font-size: @font-size-small;
+                text-align: center;
+            }
+        }
+
+    }
+    #bg-background-modal {
+        height:100%; 
+            #modal-custom-login {
+                .modal-header {
+                    .close {
+                        margin:0; 
+                        padding:0;
+                    }
+                }
+                    #wrapper-login {
+                        width:100%;
+                        left:0;
+                        top:5%!important;
+                            #login, #register {
+                                .make-xs-column(12);
+                                top:0%;
+                                position:absolute;
+                                & h1 {
+                                    margin-left:-15px;
+                                    padding:0;
+                                    font-size:@font-size-large;
+                                }
+                                & form > p {
+                                    padding:0;
+                                }
+                            .modal-footer {
+                                .make-row();
+                                padding:0;
+                                margin-top: 10px;
+                                .pull-right {
+                                    float:none!important;
+                                    margin-left:15px;
+                                }
+                            }
+                            .change_link {
+                                bottom:0;
+                                margin-left:16px;
+                            }
+                    }
+            }
+        }
+    }
+    .footer {
+        .make-row();
+        margin-top:20px;
+        height:100%;
+        font-size: @font-size-small;
+        & > h5, & > a {
+            font-size: @font-size-small;
+            line-height: 1.5em;
+        }
+    }
+}
+
+
+@media (min-width: @screen-sm) and (max-width:@screen-md) {
+    .background {
+        .stretch {
+            margin-left:50px;
+        }
+    }
+    .bg-panel {
+        width:438px;
+        padding:0 30px 37px;
+    }
+    .nav {
+        margin-left:40px;
+    }
+    .fadein {
+        margin:1px 0 0 -16px;
+        & > img {
+            margin-top:1.5em;
+        }
+    }
+    .jumbotron {
+        height:950px;
+        .btn {
+            margin-top:1.5em;
+        }
+    }
+    .panel-and-img-all {
+        .panel-and-img {
+            & p {
+            text-align: left;
+            }    
+        &.texto-inferior-acompanhe {
+            text-align:right;
+            &  p {
+                text-align: right;
+                }
+            }
+        }
+        .img-ilustra-01 {
+            .make-row();
+            margin-top:80px;
+        }
+
+        .img-ilustra {
+            margin-top:80px;
+        }   
+    }
+
+    #bg-background-modal {
+        #modal-custom-login {
+                #wrapper-login {
+                    top:7%;
+                    left:18%;
+                }
+            }
+        }
+        .footer {
+            .make-row();
+            margin-top: 20px;
+            height: 100%;}
+}
+
+ @media (min-width:@screen-md) {
+    body {
+        overflow-x: hidden;
+    }
+    .jumbotron {
+        height:700px;
+    }
+    .background {
+        .stretch {
+            margin-left:12px;
+        }
+    }
+    .nav {
+        margin-left:185px;
+    }
+    .fadein {
+        margin:1px 0 0;
+    }
+    .bg-panel {
+        margin:3px 0 0;
+        padding-bottom:22px;
+    }
+    .jumbotron {
+        .btn {
+            margin-top:1.5em;
+        }
+    }
+    .container-custom {
+        & hr {
+            margin-left:16px;
+        }
+    }
+
+    .panel-and-img-all {
+        margin-left:68px;
+        margin-right:-20px;
+        .texto-inferior-acompanhe {
+            margin:0 -65px 0 0;
+        }
+        .img-ilustra-01 {
+            margin-top:2.5em;
+        }
+    }
+     #bg-background-modal {
+        #modal-custom-login {
+                #wrapper-login {
+                    left:32%;
+                }
+        }
+    }
+
+}
+
+ @media (min-width:@screen-lg) {
+    .nav {
+        margin-left:240px;
+    }
+    .bg-panel {
+        margin:3px 50px 0 -20px;
+        padding-bottom:38px;
+    }
+    .background {
+        .stretch {
+            margin-left:-35px;
+        }
+    }
+    .panel-and-img-all {
+        margin-left:65px;
+        .texto-inferior-acompanhe {
+            margin-right:-60px;
+        }
+    }
+    .container-custom {
+        & hr {
+            padding-left:5px;
+        }
+    }
+    .jumbotron {
+        .btn {
+            margin-top: 4.5em;
+        }
+    }
+
+ }
