--- a/templates/landing.html
+++ b/templates/landing.html
@@ -47,7 +47,7 @@
                         <div class="collapse navbar-collapse">
                           <ul class="nav nav-pills col-sm-4 col-sm-push-7 col-md-3 col-lg-5 navigation">
                             <li data-slide="2"><a href="#">Sobre</a></li>
-                            <li data-slide="3"><a href="{% url "login" %}">Login</a></li>
+                            <li><a href="{% url "login" %}">Login</a></li>
                           </ul>
                         </div>
                         <div class="navbar-header col-xs-12 col-xs-pull-3">
