--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -106,6 +106,7 @@
         <script src="{{lib}}bootstrap-typeahead.js"></script>
         <script src="{{lib}}min/moment.min.js"></script>
         <script src="{{lib}}bootstrap-select.js"></script>
+        <script src="{{lib}}min/modernizr.custom.19405.js"></script>
 
         <script src="{{locales}}angular-locale_pt-br.js"></script>
         <script src="{{locales}}bootstrap-datepicker.pt-BR.js"></script>
