fixing register, login and change pass resposiveness

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -121,10 +121,15 @@ span.category-label {
     }
 }
 
-.change-password-panel {
-    width: 40%;
-    
-    .center-block();
+.center-panel {
+    .make-lg-column(4);
+    .make-lg-column-offset(4);
+
+    .make-md-column(6);
+    .make-md-column-offset(3);
+
+    .make-sm-column(6);
+    .make-sm-column-offset(3);
 }
 
 hr {
