--- a/templates/access/change_password.html
+++ b/templates/access/change_password.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     
-<div class="panel panel-default change-password-panel">
+<div class="panel panel-default center-panel">
     <div class="panel-body">
         <form action="{% url "change_password" %}" method="POST" class="form-horizontal">{% csrf_token %}
             <div class="form-group">
