--- a/templates/access/login.html
+++ b/templates/access/login.html
@@ -6,7 +6,7 @@
     
 <h2 class="area-header">{% trans "Please sign in" %}</h2>
 
-<div class="panel panel-default change-password-panel">
+<div class="panel panel-default center-panel">
     <div class="panel-body">
         <form id="signin-form" method="POST" action="{% url "login" %}" class="form-horizontal">{% csrf_token %}
 
