--- a/templates/access/register.html
+++ b/templates/access/register.html
@@ -6,7 +6,7 @@
 
 <h2 class="area-header">{% trans "Sign up" %}</h2>
 
-<div class="panel panel-default change-password-panel">
+<div class="panel panel-default center-panel">
     <div class="panel-body">
         {% include "access/forms/register.html" %}
     </div>
