--- a/templates/password_reset/base.html
+++ b/templates/password_reset/base.html
@@ -6,7 +6,7 @@
 
 <h2 class="area-header">{% block title %}{% endblock title %}</h2>
 
-<div class="panel panel-default change-password-panel">
+<div class="panel panel-default center-panel">
     <div class="panel-body">
         {% block content %}
         {% endblock content %}
