tracking new stuff

--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -50,6 +50,7 @@
                         <a class="accordion-toggle"
                             data-toggle="collapse"
                             href="#category(($index))"
+                            track="click,Transactions,open-category"
                             ng-bind="group.name"></a>
 
                             <span class="group-total pull-right" ng-bind="group.total | currency" is-positive-class="group.total"></span>
