--- a/templates/base.html
+++ b/templates/base.html
@@ -54,13 +54,11 @@
 
         {% block bodyend %}{% endblock bodyend %}
 
-        {% comment %}
-            If i'm not debugging and i'm not in a test instance.
-        {% endcomment %}
-        {% if not is_debug and not is_test_instance %}
-            {% include "ga.html" %}
+        {% if not is_debug %}
+            {% if not is_test_instance %}
+                {% include "ga.html" %}
+            {% endif %}
         {% endif %}
-
 
         {% csrf_token %}
     </body>
