--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
       <head>
@@ -11,15 +12,13 @@
         <title>Niqels - O seu organizador Financeiro Pessoal</title>
     
         <!-- Bootstrap core CSS -->
-        <link href="/static/landing/css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/static/landing/css/animate-custom.css">
+        <link rel="stylesheet" type="text/css" href="{% static "css/landing.css" %}" />
         <!-- Custom styles for this template -->
 
         <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet'>
         <link href='http://fonts.googleapis.com/css?family=Roboto:500' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700' rel='stylesheet' type='text/css'>
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">       
     
     
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -113,7 +112,7 @@
                                             </div><!-- .panel-body -->
                                           </div><!-- #collapseThree -->
                                         </div><!-- .panel.panel-default -->
-                                  <a class="btn btn-lg btn-primary btn-custom col-xs-12" href="/register/">Experimente agora 
+                                  <a class="btn btn-lg btn-warning btn-custom col-xs-12" href="/register/">Experimente agora 
                                   <span class="glyphicon glyphicon-chevron-right"></span>
                                   </a>
                             </div> <!-- .panel-group-->
