--- a/templates/landing.html
+++ b/templates/landing.html
@@ -36,94 +36,89 @@
       <![endif]-->
 
     </head>
-    <body class="col-lg-12">
-            <div class="navbar navbar-default" role="navigation">
-                  <div class="header col-sm-12 col-md-12 col-lg-12">
-                        <div class="background col-xs-12 col-sm-8 col-md-8 col-lg-11 col-lg-push-1">
-                            <h1 class="stretch"><a class="brand" href="#">Niqels</a></h1>
-                        </div><!-- .background -->
+    <body>
+        <div class="navbar navbar-default" role="navigation">
+            <div class="container">
+            <div class="header col-sm-12 col-md-12 col-lg-12">
+                <div class="background col-xs-12 col-sm-8 col-md-8 col-lg-11 col-lg-push-1">
+                    <h1 class="stretch"><a class="brand" href="#">Niqels</a></h1>
+                </div><!-- .background -->
 
-                        <div class="collapse navbar-collapse">
-                          <ul class="nav nav-pills col-sm-4 col-sm-push-7 col-md-3 col-lg-5 navigation">
-                            <li data-slide="2"><a href="#">Sobre</a></li>
-                            <li><a href="{% url "login" %}">Login</a></li>
-                          </ul>
-                        </div>
-                        <div class="navbar-header col-xs-12 col-xs-pull-3">
-                          <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                          </button>
-                        </div> <!-- .navbar-header -->
-                  </div><!-- .header -->
-            </div><!-- .navbar.navbar-default -->
+                <div class="collapse navbar-collapse">
+                    <ul class="nav nav-pills col-sm-4 col-sm-push-7 col-md-3 col-lg-5 navigation">
+                        <li data-slide="2"><a href="#">Sobre</a></li>
+                        <li><a href="{% url "login" %}">Login</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-header col-xs-12 col-xs-pull-3">
+                    <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div> <!-- .navbar-header -->
+            </div> <!-- .header -->
+            </div>
+        </div> <!-- .navbar.navbar-default -->
            
-      
-            <div class="jumbotron row">
-                  <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
-                  <p class="lead lead-custom">
-                  Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
-                  </p>
-                  <div class="panel-fadein col-xs-12 col-sm-12 col-md-12 col-md-pull-2 col-lg-11 col-lg-pull-1">
-                        <div class="bg-panel col-xs-12 col-sm-7 col-sm-push-2 col-md-5 col-md-offset-1 col-lg-4">
-                            <div class="panel-group" id="accordion">
-                                        <div class="panel panel-default">
-                                          <div class="panel-heading">
-                                            <h4 class="panel-title">
-                                              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                                                Organize seus gastos <i class="icon-tags"></i>
-                                              </a>
-                                            </h4>
-                                          </div><!-- .panel-heading -->
-                                          <div id="collapseOne" class="panel-collapse collapse">
-                                            <div class="panel-body">
-                                              Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
-                                            </div><!-- .panel-body -->
-                                          </div><!-- #collapseOne -->
-                                        </div><!-- .panel.panel-default -->
-                                        <div class="panel panel-default">
-                                          <div class="panel-heading">
-                                            <h4 class="panel-title">
-                                              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-                                                Acompanhe sua evolução  <i class="icon-thumbs-up-alt"></i>
-                                              </a>
-                                            </h4>
-                                          </div><!-- .panel-heading -->
-                                          <div id="collapseTwo" class="panel-collapse collapse">
-                                            <div class="panel-body">
-                                              Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
-                                               desnecessários.
-                                            </div><!-- .panel-body -->
-                                          </div><!-- #collapseTwo -->
-                                        </div><!-- .panel.panel-default -->
-                                        <div class="panel panel-default">
-                                          <div class="panel-heading">
-                                            <h4 class="panel-title">
-                                              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                                                Registre-se agora! <i class="icon-user"></i>
-                                              </a>
-                                            </h4>
-                                          </div><!-- .panel-heading -->
-                                          <div id="collapseThree" class="panel-collapse collapse">
-                                            <div class="panel-body">
-                                              Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
-                                            </div><!-- .panel-body -->
-                                          </div><!-- #collapseThree -->
-                                        </div><!-- .panel.panel-default -->
-                                  <a class="btn btn-lg btn-warning btn-custom col-xs-12" href="/register/">Experimente agora 
-                                  <span class="glyphicon glyphicon-chevron-right"></span>
-                                  </a>
-                            </div> <!-- .panel-group-->
-                        </div> <!-- .bg-panel -->
-                          <div class="fadein col-sm-8 col-sm-push-2 col-md-7 col-lg-7 hidden-xs">
-                             <img class="img-responsive" src="/static/landing/img/captura1.png">
-                             <img class="img-responsive" src="/static/landing/img/captura2.png">
-                             <img class="img-responsive" src="/static/landing/img/captura3.png">
-                          </div><!-- .fadein.visible-lg -->
-                  </div> <!-- .panel-fadein -->
-            </div> <!-- . jumbotron -->
+        <div class="well">
+            <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
+            <p class="lead lead-custom">
+                Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
+            </p>
+            <div class="panel-group container" id="features">
+                <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a>Organize seus gastos <i class="icon-tags"></i></a>
+                        </h4>
+                    </div><!-- .panel-heading -->
+
+                    <div class="panel-body">
+                        Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
+                    </div><!-- .panel-body -->
+                </div><!-- .panel.panel-default -->
+                </div>
+
+                <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a>
+                                Acompanhe sua evolução  <i class="icon-thumbs-up-alt"></i>
+                            </a>
+                        </h4>
+                    </div><!-- .panel-heading -->
+
+                    <div class="panel-body">
+                        Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
+                        desnecessários.
+                    </div><!-- .panel-body -->
+                </div><!-- .panel.panel-default -->
+                </div>
+
+                <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a>
+                                Registre-se agora! <i class="icon-user"></i>
+                            </a>
+                        </h4>
+                    </div><!-- .panel-heading -->
+
+                    <div class="panel-body">
+                        Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
+                    </div><!-- .panel-body -->
+                </div><!-- .panel.panel-default -->
+                </div>
+
+                <a class="btn btn-lg btn-warning btn-custom col-sm-4 col-sm-offset-4 col-xs-12" href="/register/">Experimente agora 
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div> <!-- .panel-group-->
+    </div> <!-- .well -->
 
         
              <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
@@ -175,16 +170,6 @@
             <script type="text/javascript" src="/static/landing/js/waypoints.min.js"></script>
             <script type="text/javascript" src="/static/landing/js/jquery.easing.1.3.js"></script>
             <script type="text/javascript" src="/static/landing/js/scripts.js"></script>
-            <script>
-                $(function(){
-                    $('.fadein img:gt(0)').hide();
-                    setInterval(function(){
-                      $('.fadein :first-child').fadeOut()
-                         .next('img').fadeToggle( "slow", "linear" )
-                         .end().appendTo('.fadein');}, 
-                      5000);
-                });
-            </script>
 
             {% if USE_GA %}
                 {% include "ga.html" %}
